upgrade to Spring Boot 3.2 properties

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -34,7 +34,8 @@ management:
         http:
           server:
             requests: true
-    tags:
+  observations:
+    key-values:
       application: ${spring.application.name}
 ## Configuring info endpoint
 info:
