--- a/compose.yml
+++ b/compose.yml
@@ -13,6 +13,8 @@ services:
       - MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE=health,info,env,prometheus
       - MANAGEMENT_TRACING_ENABLED=true
       - MANAGEMENT_OLTP_TRACING_ENDPOINT=http://otel:4318/v1/traces
+      - OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://otel:4318/v1/traces
+      - OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=http://otel:4318/v1/metrics
     depends_on:
       - redis
       - otel
