--- a/compose.yml
+++ b/compose.yml
@@ -12,7 +12,9 @@ services:
       - MANAGEMENT_ENDPOINT_ENV_SHOW_VALUES=ALWAYS
       - MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE=health,info,env,prometheus
       - MANAGEMENT_TRACING_ENABLED=true
-      - MANAGEMENT_OLTP_TRACING_ENDPOINT=http://otel:4318/v1/traces
+      - MANAGEMENT_OTLP_METRICS_EXPORT_URL=http://otel:4318/v1/metrics
+      - MANAGEMENT_OTLP_METRICS_EXPORT_ENABLED=true
+      - MANAGEMENT_OTLP_TRACING_ENDPOINT=http://otel:4318/v1/traces
       - OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://otel:4318/v1/traces
       - OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=http://otel:4318/v1/metrics
     depends_on:
