--- a/compose.yml
+++ b/compose.yml
@@ -14,9 +14,9 @@ services:
       - MANAGEMENT_TRACING_ENABLED=true
       - MANAGEMENT_OTLP_METRICS_EXPORT_URL=http://otel:4318/v1/metrics
       - MANAGEMENT_OTLP_METRICS_EXPORT_ENABLED=true
-      - MANAGEMENT_OTLP_TRACING_ENDPOINT=http://otel:4318/v1/traces
-      - OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://otel:4318/v1/traces
-      - OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=http://otel:4318/v1/metrics
+      - MANAGEMENT_OTLP_TRACING_ENDPOINT=http://otel:4318
+#      - OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://otel:4318/v1/traces
+#      - OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=http://otel:4318/v1/metrics
     depends_on:
       - redis
       - otel
