--- a/compose.yml
+++ b/compose.yml
@@ -34,12 +34,11 @@ services:
 #      - otel
 
   otel:
-    container_name: otel
     image: otel/opentelemetry-collector-contrib
+    extra_hosts: ['host.docker.internal:host-gateway']
     environment:
       - METRICS_HOST=app
       - METRICS_PORT=8080
-      - PROMETHEUS_PORT=9090
       - TEMPO_PORT=4317
       - TEMPO_HOST=tempo
     profiles:
@@ -55,6 +54,7 @@ services:
       - "3200"   # tempo
       - "4317"  # otlp grpc
       - "4318"  # otlp http
+      - "8889:8889" # prometheus exporter metrics
   tempo:
     image: grafana/tempo:2.3.0
     extra_hosts: ['host.docker.internal:host-gateway']
@@ -81,6 +81,7 @@ services:
     extra_hosts: ['host.docker.internal:host-gateway']
     command:
       - --enable-feature=exemplar-storage
+      - --web.enable-remote-write-receiver
       - --config.file=/etc/prometheus/prometheus.yml
     volumes:
       - ./docker/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
@@ -102,3 +103,9 @@ services:
       - observability
     ports:
       - "3000:3000"
+
+volumes:
+  prometheus:
+    driver: local
+  tempo:
+    driver: local
