--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -4,5 +4,7 @@ global:
 
 scrape_configs:
     - job_name: 'prometheus'
+      metrics_path: '/metrics'
+      scrape_interval: 5s
       static_configs:
-          - targets: ['host.docker.internal:9090']
+        - targets: ['host.docker.internal:8889']
