--- a/compose.yml
+++ b/compose.yml
@@ -50,11 +50,12 @@ services:
     volumes:
       - ./docker/collector/otel-collector-config.yaml:/etc/otelcol-contrib/config.yaml
     ports:
-      - "14268"  # jaeger ingest
-      - "3200"   # tempo
-      - "4317"  # otlp grpc
-      - "4318"  # otlp http
+      - "8888:8888" # prometheus metrics exposed by the collector
       - "8889:8889" # prometheus exporter metrics
+      - "13133:13133" #health check extension
+      - "4317:4317"  # otlp grpc
+      - "4318:4318"  # otlp http
+
   tempo:
     image: grafana/tempo:2.3.0
     extra_hosts: ['host.docker.internal:host-gateway']
@@ -66,8 +67,7 @@ services:
       - observability
     ports:
       - "3200:3200"
-      - "4317:4317" # otlp grpc
-      - "4318:4318" # otlp http
+      - "4317" # otlp grpc
   loki:
     image: grafana/loki
     extra_hosts: ['host.docker.internal:host-gateway']
