updated configuration to get data from prometheuse endpoint exposed by the app

--- a/docker/collector/otel-collector-config.yaml
+++ b/docker/collector/otel-collector-config.yaml
@@ -63,7 +63,7 @@ service:
       processors: [batch]
       exporters: [otlp]
     metrics:
-      receivers: [otlp]
+      receivers: [prometheus]
       processors: [batch]
       exporters: [prometheus, debug]
     logs:
