--- a/compose.yml
+++ b/compose.yml
@@ -10,12 +10,12 @@ services:
     environment:
       - SPRING_DATA_REDIS_HOST=redis
       - MANAGEMENT_ENDPOINT_ENV_SHOW_VALUES=ALWAYS
-      - MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE=health,info,env,prometheus
+      - MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE=health,info,env
       - MANAGEMENT_TRACING_ENABLED=true
       - MANAGEMENT_OTLP_METRICS_EXPORT_URL=http://otel:4318/v1/metrics
+      - MANAGEMENT_OTLP_METRICS_EXPORT_STEP=10s
       - MANAGEMENT_OTLP_METRICS_EXPORT_ENABLED=true
       - MANAGEMENT_OTLP_TRACING_ENDPOINT=http://otel:4318/v1/traces
-#      - LOGGING_LEVEL_ROOT=debug
     depends_on:
       - redis
       - otel
@@ -24,17 +24,8 @@ services:
     ports:
       - "8080:8080"
 
-  # Generate fake traces...
-#  k6-tracing:
-#    image: ghcr.io/grafana/xk6-client-tracing:v0.0.2
-#    environment:
-#      - ENDPOINT=otel:4317
-#    restart: always
-#    depends_on:
-#      - otel
-
   otel:
-    image: otel/opentelemetry-collector-contrib
+    image: otel/opentelemetry-collector-contrib:0.90.0
     extra_hosts: ['host.docker.internal:host-gateway']
     profiles:
       - observability
@@ -42,14 +33,17 @@ services:
       - tempo
       - loki
       - grafana
+    command: [ "--config=/etc/otelcol-contrib/config.yaml" ]
     volumes:
       - ./docker/collector/otel-collector-config.yaml:/etc/otelcol-contrib/config.yaml
     ports:
-      - "8888:8888" # prometheus metrics exposed by the collector
-      - "8889:8889" # prometheus exporter metrics
-      - "13133:13133" #health check extension
-      - "4317:4317"  # otlp grpc
-      - "4318:4318"  # otlp http
+      - "1888:1888" # pprof extension
+      - "8888:8888" # Prometheus metrics exposed by the Collector
+      - "8889:8889" # Prometheus exporter metrics
+      - "13133:13133" # health_check extension
+      - "4317:4317" # OTLP gRPC receiver
+      - "4318:4318" # OTLP http receiver
+      - "55679:55679" # zpages extension
 
   tempo:
     image: grafana/tempo:2.3.0
@@ -73,7 +67,7 @@ services:
       - observability
   prometheus:
     image: prom/prometheus
-    extra_hosts: ['host.docker.internal:host-gateway']
+    container_name: prometheus
     command:
       - --enable-feature=exemplar-storage
       - --web.enable-remote-write-receiver
@@ -98,9 +92,3 @@ services:
       - observability
     ports:
       - "3000:3000"
-
-volumes:
-  prometheus:
-    driver: local
-  tempo:
-    driver: local
