--- a/docker/collector/otel-collector-config.yaml
+++ b/docker/collector/otel-collector-config.yaml
@@ -5,16 +5,6 @@ receivers:
       grpc:
       http:
 
-  # Data sources: metrics
-  prometheus:
-    config:
-      scrape_configs:
-        - job_name: otel-collector
-          scrape_interval: 5s
-          metrics_path: '/actuator/prometheus'
-          static_configs:
-            - targets: ['0.0.0.0:8080']
-
 processors:
   resource:
     attributes:
@@ -63,9 +53,9 @@ service:
       processors: [batch]
       exporters: [otlp]
     metrics:
-      receivers: [prometheus]
+      receivers: [otlp]
       processors: [batch]
-      exporters: [prometheus, debug]
+      exporters: [prometheus]
     logs:
       receivers: [otlp]
       processors: [batch]
