--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -3,6 +3,6 @@ global:
     evaluation_interval: 2s
 
 scrape_configs:
-    - job_name: 'prometheus'
+    - job_name: 'otel'
       static_configs:
         - targets: ['otel:8889']
